--- a/html/mirasimiz.html
+++ b/html/mirasimiz.html
@@ -36,7 +36,7 @@
 
             </ul>
         </div>
-            <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="login.html">Login</a>
 
     </nav>
 </div>
@@ -133,7 +133,7 @@
 </div>
 
 <div class="container-fluid footer">
-    <p><small>© 2020 Tüm Hakları Saklıdır.</small></p>
+    <p><small>© Bu Site GNU Lisansına Sahiptir.</small></p>
 </div>
 
 
