--- a/html/mirasimiz.html
+++ b/html/mirasimiz.html
@@ -34,6 +34,9 @@
                     <a class="nav-link" href="iletisim.html">İletişim</a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link" href="ilgiAlanlarim.html">İlgi Alanlarım</a>
+                </li>
             </ul>
         </div>
         <a class="nav-link" href="login.html">Login</a>
