--- a/html/iletisim.html
+++ b/html/iletisim.html
@@ -1,23 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr-TR">
 <head>
-    <title>İletisim</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <script src="https://kit.fontawesome.com/d5b5e71fcf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/contact/style.css">
+    <link rel="stylesheet" href="../css/iletisim.css">
+    <link rel="shortcut icon" href="../img/favicon.ico">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <title>İletişim</title>
 </head>
 <body>
 <div class="container-fluid header" id="top">
     <nav class="navbar navbar-expand-lg">
-        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -35,138 +32,123 @@
                     <a class="nav-link" href="iletisim.html">İletişim</a>
                 </li>
                 <li class="nav-item">
-
+                    <a class="nav-link" href="ilgiAlanlarim.html">İlgi Alanlarım</a>
                 </li>
             </ul>
         </div>
         <a class="nav-link" href="login.html">Login</a>
     </nav>
 </div>
-<section class="ftco-section">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center mb-5">
-                <h2 class="heading-section">İletişim</h2>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-md-12">
-                <div class="wrapper">
-                    <div class="row no-gutters mb-5">
-                        <div class="col-md-7">
-                            <div class="contact-wrap w-100 p-md-5 p-4">
-                                <h3 class="mb-4">İletişim</h3>
-                                <div id="form-message-warning" class="mb-4"></div>
-                                <div id="form-message-success" class="mb-4">
-                                    Your message was sent, thank you!
-                                </div>
-                                <form method="POST" id="contactForm" name="contactForm" class="contactForm">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="label" for="name">Ad Soyad</label>
-                                                <input type="text" class="form-control" name="name" id="name" placeholder="Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label class="label" for="email">Email Adresi</label>
-                                                <input type="email" class="form-control" name="email" id="email" placeholder="Email">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <label class="label" for="subject">Başlık</label>
-                                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Başlık Giriniz">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <label class="label" for="#">Mesaj</label>
-                                                <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Mesajınızı Giriniz"></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <input type="submit" value="Temizle" class="btn btn-primary">
-                                                <div class="submitting"></div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="form-group">
-                                                <input type="submit" value="Gönder" class="btn btn-primary">
-                                                <div class="submitting"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="col-md-5 d-flex align-items-stretch">
-                            <div id="map">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="dbox w-100 text-center">
-                                <div class="icon d-flex align-items-center justify-content-center">
-                                    <span class="fa fa-map-marker"></span>
-                                </div>
-                                <div class="text">
-                                    <p> Sakarya/Serdivan</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="dbox w-100 text-center">
-                                <div class="icon d-flex align-items-center justify-content-center">
-                                    <span class="fa fa-phone"></span>
-                                </div>
-                                <div class="text">
-                                    <p> <a href="tel://1234567920">+ 905522060997</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="dbox w-100 text-center">
-                                <div class="icon d-flex align-items-center justify-content-center">
-                                    <span class="fa fa-paper-plane"></span>
-                                </div>
-                                <div class="text">
-                                    <p> <a href="mailto:info@yoursite.com">mumtaz.danaci1@ogr.sakarya.edu.tr</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="dbox w-100 text-center">
-                                <div class="icon d-flex align-items-center justify-content-center">
-                                    <span class="fa fa-globe"></span>
-                                </div>
-                                <div class="text">
-                                    <p> <a href="#">mumtazdanaci.com</a></p>
-                                </div>
-                            </div>
-                        </div>
+<div class="container ">
+    <div class="row row-baslik">
+        <div class="col-md-12 baslik">İletişim Formu</div>
+    </div>
+    <div class="row row-form">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <form action="../php/iletisim.php" method="POST" name="form" onsubmit="return formDenetle()">
+                <div class="row row-text">
+                    <div class="col-md-4 label" id="labelAd">Adınız</div>
+                    <div class="col-md-8 text-div"><input type="text" placeholder="Adınız" name="ad" id="ad" class="text"></div>
+                </div>
+                <div class="row row-text">
+                    <div class="col-md-4 label" id="labelSoyad">Soyadınız</div>
+                    <div class="col-md-8 text-div"><input type="text" name="soyad" id="soyad" placeholder="Soyad" class="text"></div>
+                </div>
+                <div class="row row-text">
+                    <div class="col-md-4 label" id="labelEmail">E-mail</div>
+                    <div class="col-md-8 text-div"><input type="email" name="email" id="email" placeholder="email" class="text"></div>
+                </div>
+                <div class="row row-text">
+                    <div class="col-md-4 label">Cinsiyet</div>
+                    <div class="col-md-8 text-div">
+                        <input type="radio" name="cinsiyet" value="Bay" checked>Bay
+                        <input type="radio" name="cinsiyet" value="Bayan">Bayan
                     </div>
                 </div>
-            </div>
+                <div class="row row-text">
+                    <div class="col-md-4 label">Bana Nereden Ulaştınız</div>
+                    <div class="col-md-8 text-div">
+                        <select name="nereden" class="text">
+                            <option  value="random" selected>Denk Geldi</option>
+                            <option value="add">Reklamlardan</option>
+                            <option value="linkedin">linkedindan</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row row-text">
+                    <div class="col-md-4 label">Size hangi kanallardan bildirim göndermemi istersiniz?</div>
+                    <div class="col-md-8 text-div">
+                        <input type="checkbox" name="dil[]" value="mail" checked>Email
+                        <input type="checkbox" name="dil[]" value="discord" >Discord
+                        <input type="checkbox" name="dil[]" value="linkdinn">Linkedin
+                        <input type="checkbox" name="dil[]" value="linkdinn">Facebook
+                    </div>
+                </div>
+                <div class="row row-text">
+                    <div class="col-md-4 label" id="labelMesaj">Mesajınız</div>
+                    <div class="col-md-8 text-div"><textarea name="mesaj" id="mesaj" class="text" cols="60" rows="4" placeholder="Mesajınızı Girin..."></textarea></div>
+                </div>
+                <div class="row row-text">
+                    <div class="col-md-6 button"><button type="reset">Temizle</button></div>
+                    <div class="col-md-6 button"><button type="submit" name="gonder">Gönder</button></div>
+                </div>
+                <div class="row row-text">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 hata" id="hata"><i class="fas fa-exclamation-circle"></i> Lütfen Kırmızı Alanları Doldurunuz <i class="fas fa-exclamation-circle"></i></div>
+                    <div class="col-md-2"></div>
+                </div>
+            </form>
+            <script src="../js/iletisim.js"></script>
         </div>
     </div>
-</section>
+</div>
+<a href="#top"><div class="yukari"><i class="fas fa-angle-up fa-2x"></i></div></a>
+
+<div class="footer-clean">
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#">Web design</a></li>
+                        <li><a href="#">Development</a></li>
+                        <li><a href="#">Hosting</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>About</h3>
+                    <ul>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Legacy</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Careers</h3>
+                    <ul>
+                        <li><a href="#">Job openings</a></li>
+                        <li><a href="#">Employee success</a></li>
+                        <li><a href="#">Benefits</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
+
 
 <div class="container-fluid footer">
     <p><small>© Bu Site GNU Lisansına Sahiptir.</small></p>
 </div>
 
-<script src="../js/jquery.min.js"></script>
-<script src="../js/popper.js"></script>
-<script src="../js/jquery.validate.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/google-map.js"></script>
-<script src="../js/main.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
-
