--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 
     <title>Hakkında</title>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/d5b5e71fcf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
 </head>
-<body>
+<body class="body">
 <div class="container-fluid header" id="top">
     <nav class="navbar navbar-expand-lg">
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="index.html">Hakkında<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="html/cv.html">CV</a>
+                    <a class="nav-link" href="html/ozGecmis.html">Özgeçmiş</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="html/sehrim.html">Şehrim</a>
@@ -34,15 +34,101 @@
                 <li class="nav-item">
                     <a class="nav-link" href="html/iletisim.html">İletişim</a>
                 </li>
-                <li class="nav-item">
 
+                <li class="nav-item">
+                    <a class="nav-link" href="ilgiAlanlarim.html">İlgi Alanlarım</a>
                 </li>
             </ul>
-
         </div>
         <a class="nav-link" href="html/login.html">Login</a>
     </nav>
 </div>
+<div class="container-fluid ">
+    <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4 giris">
+            <p><h4> Mümtaz DANACI </h4> Sakarya Üniversitesi Bilgisayar Mühendisliği dördüncü sınıf öğrencisiyim.
+            Bu sayfada Hobilerimden, katıldığım Etkinlikler gibi bilgilerden bahsettim.</p>
 
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+    <div class="container">
+        <div class="row hobi-row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 box">
+                <div class="row">
+                    <div class="col-sm-5 pic"><a href="https://medium.com/@dncmumtaz"> <img src="img/medium.png"
+                                                                                            alt=""></a></div>
+                    <div class="col-sm-7 tex "><p> Medium yazılarıma buradan
+                        ulaşabilirsiniz<a href="https://medium.com/@dncmumtaz"> Burası</a></p></div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-2"></div>
+            <div class="col-md-8 box"><br>
+                <div class="row">
+                    <div class="col-sm-5 pic"><a
+                            href="https://www.atilimglobal.org/photos?lightbox=dataItem-jr5hu8s3"><img
+                            src="img/ipman.jpg" alt=""></a>
+                    </div>
+                    <div class="col-sm-7 tex "><p> Üç yılı aşkın süredir uzakdoğu
+                        savunma sanatı ile ilgileniyorum fotoğrafları ve okulumuza resmin üzerine tıklayarak
+                        ulabilirsiniz.
+                    </div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+        <div class="row hobi-row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 box">
+                <div class="row">
+                    <div class="col-sm-5 pic"><a
+                            href="https://www.storytel.com/tr/tr/c/ogrenci-indirimi"><img
+                            src="img/storytel.png" alt=""></a></div>
+                    <div class="col-sm-7 tex "><p> Kitap dinlemekten çok hoşlanırım
+                        ve bu konuda sizede storytel adlı uygulamayı tavsiye ederim. Resme tıklayarak erişebilirsiniz.
+                    </p></div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-2"></div>
+            <div class="col-md-8 box"><br>
+                <div class="row">
+                    <div class="col-sm-5 pic"><a
+                            href="https://lichess.org/@/dncmumtaz"><img
+                            src="img/chess.png" alt=""></a></div>
+                    <div class="col-sm-7 tex "> Satranç oynamak en sevdiğim
+                        lerimden biridir.<a
+                                href="https://lichess.org/@/dncmumtaz">Buraya
+                            tıklayarak lichessteki skorumu görebilirsiniz.</a>
+                        </p></div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+
+    </div>
+</div>
+<a href="#top">
+    <div class="top"><i class="fas fa-angle-up fa-2x"></i></div>
+</a>
+<div class="container-fluid footer">
+    <p><small>© Bu Site GNU Lisansına Sahiptir.</small></p>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 </html>
