--- a/html/ilgiAlanlarim.html
+++ b/html/ilgiAlanlarim.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="tr-TR">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <title>İlgi Alanlarım</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/d5b5e71fcf.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
 </head>
-<body>
-merhaba
+<body class="body">
+<div class="container-fluid header" id="top">
+    <nav class="navbar navbar-expand-lg">
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Hakkında<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="html/ozGecmis.html">Özgeçmiş</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="html/sehrim.html">Şehrim</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="html/iletisim.html">İletişim</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="ilgiAlanlarim.html">İlgi Alanlarım</a>
+                </li>
+            </ul>
+        </div>
+        <a class="nav-link" href="html/login.html">Login</a>
+    </nav>
+</div>
 </body>
 </html>
