In index page, some links are fixed.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="ilgiAlanlarim.html">İlgi Alanlarım</a>
+                    <a class="nav-link" href="html/ilgiAlanlarim.html">İlgi Alanlarım</a>
                 </li>
             </ul>
         </div>
