--- a/html/ilgiAlanlarim.html
+++ b/html/ilgiAlanlarim.html
@@ -39,7 +39,7 @@
                 </li>
             </ul>
         </div>
-        <a class="nav-link" href="html/login.html">Login</a>
+        <a class="nav-link" href="login.html">Login</a>
     </nav>
 </div>
 <br>
